@@ -1,18 +1,26 @@
 package com.libraryManagement.project.controller;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
 import com.libraryManagement.project.entity.Category;
+import com.libraryManagement.project.security.JwtUtil;
 import com.libraryManagement.project.service.impl.CategoryServiceImpl;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.mockito.Mockito;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.test.context.support.WithMockUser;
 import org.springframework.test.web.servlet.MockMvc;
 
-import java.util.List;
+import java.util.Collections;
 
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.when;
+import static org.mockito.Mockito.doNothing;
+import static org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors.csrf;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
@@ -25,9 +33,25 @@ public class CategoryControllerTest {
     @MockBean
     private CategoryServiceImpl categoryService;
 
+    @MockBean
+    private JwtUtil jwtUtil;
+
+    @Autowired
+    private ObjectMapper objectMapper;
+
+    private Category category;
+
+    @BeforeEach
+    void setUp() {
+        category = new Category();
+        category.setCategoryId(1L);
+        category.setName("Fiction");
+    }
+
     @Test
+    @WithMockUser
     void testGetAllCategories() throws Exception {
-        Mockito.when(categoryService.getAllCategories()).thenReturn(List.of(new Category(1L, "Fiction")));
+        when(categoryService.getAllCategories()).thenReturn(Collections.singletonList(category));
 
         mockMvc.perform(get("/categories"))
                 .andExpect(status().isOk())
@@ -35,45 +59,39 @@ public class CategoryControllerTest {
     }
 
     @Test
+    @WithMockUser
     void testGetCategoryById() throws Exception {
-        Mockito.when(categoryService.getCategoryById(1L)).thenReturn(new Category(1L, "Science"));
+        when(categoryService.getCategoryById(1L)).thenReturn(category);
 
         mockMvc.perform(get("/categories/get/1"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.name").value("Science"));
+                .andExpect(jsonPath("$.name").value("Fiction"));
     }
 
     @Test
+    @WithMockUser(authorities = "ADMIN")
     void testAddCategory() throws Exception {
-        Category category = new Category(2L, "History");
-        Mockito.when(categoryService.addCategory(Mockito.any())).thenReturn(category);
+        when(categoryService.addCategory(any(Category.class))).thenReturn(category);
 
         mockMvc.perform(post("/categories/add")
+                        .with(csrf())
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content("{\"name\":\"History\"}"))
+                        .content(objectMapper.writeValueAsString(category)))
                 .andExpect(status().isCreated())
-                .andExpect(jsonPath("$.name").value("History"));
+                .andExpect(jsonPath("$.name").value("Fiction"));
     }
 
     @Test
+    @WithMockUser(authorities = "ADMIN")
     void testUpdateCategory() throws Exception {
-        Category updated = new Category(1L, "UpdatedCategory");
-        Mockito.when(categoryService.updateCategory(Mockito.eq(1L), Mockito.any())).thenReturn(updated);
+        when(categoryService.updateCategory(eq(1L), any(Category.class))).thenReturn(category);
 
         mockMvc.perform(put("/categories/update/1")
+                        .with(csrf())
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content("{\"name\":\"UpdatedCategory\"}"))
+                        .content(objectMapper.writeValueAsString(category)))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.name").value("UpdatedCategory"));
+                .andExpect(jsonPath("$.name").value("Fiction"));
     }
 
-    @Test
-    void testDeleteCategory() throws Exception {
-        Mockito.when(categoryService.deleteCategory(1L)).thenReturn(ResponseEntity.ok("Category deleted"));
-
-        mockMvc.perform(delete("/categories/delete/1"))
-                .andExpect(status().isOk())
-                .andExpect(content().string("Category deleted"));
-    }
 }
-
